@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.168 2002/03/27 16:48:38 stelian Exp $
+$Id: CHANGES,v 1.169 2002/03/28 14:53:01 stelian Exp $
 
 Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
 =======================================================================
@@ -31,6 +31,13 @@ Changes between versions 0.4b27 and 0.4b28 (released ?????????????????)
 6.	Added the appropriate error message when dump fails to
 	open the output file for writing. Thanks to Amith Varghese
 	<amithv@yahoo.com> for reporting this bug.
+
+7.	Made restore able to understand large Solaris ufsdump tapes 
+	(containing inodes bigger than 4194304). Sun have introduced
+	an "extension" to the dump tape format when dealing with
+	those inodes, which was uncorrectly handled by Linux restore.
+	Thanks to Uwe Gohlke <uwe@ugsoft.de> for reporting the bug and
+	providing a test case.
 
 Changes between versions 0.4b26 and 0.4b27 (released February 15, 2002)
 =======================================================================
